changed main font size in all styles

--- a/src/styles/AboutMe.module.scss
+++ b/src/styles/AboutMe.module.scss
@@ -10,6 +10,7 @@
     background-color: $secondary-color;
     border-radius: 15px;
     box-shadow: 0px 4px 12px 0 rgba(0, 0, 0, 0.5), 0px 8px 16px 0 rgba(0, 0, 0, 0.3);
+    font-size: 0.9em;
 
     .aboutmeTitle {
         display: inline-block;
