--- a/src/styles/Contact.module.scss
+++ b/src/styles/Contact.module.scss
@@ -39,7 +39,7 @@
 }
 
 .contactButtons {
-    margin: 10px 0px 100px;
+    margin: 10px 0px 20px;
     a {
         background: none;
         color: $accent-color;
@@ -66,6 +66,14 @@
             border-color: $primary-color;
             transform: scale(1.08);
         }
+    }
+}
+
+.emailId {
+    margin-bottom: 100px;
+    h3 {
+        color: $accent-color;
+
     }
 }
 
